syntax = "proto3";

package temporal.server.chasm.lib.worker.proto.v1;

option go_package = "go.temporal.io/server/chasm/lib/worker/gen/workerpb;workerpb";

import "temporal/api/workflowservice/v1/request_response.proto";
import "temporal/server/api/routing/v1/extension.proto";

// WorkerService handles worker heartbeats via CHASM.
service WorkerService {
    // RecordHeartbeat records a worker heartbeat.
    rpc RecordHeartbeat(RecordHeartbeatRequest) returns (RecordHeartbeatResponse) {
        option (temporal.server.api.routing.v1.routing).business_id = "worker_instance_key";
    }
}

// RecordHeartbeatRequest is the internal request for recording a worker heartbeat.
message RecordHeartbeatRequest {
    // Internal namespace ID (UUID).
    string namespace_id = 1;

    // The frontend request containing heartbeat information.
    temporal.api.workflowservice.v1.RecordWorkerHeartbeatRequest frontend_request = 2;

    // The worker instance key for routing. Extracted from frontend_request.worker_heartbeat[0].
    string worker_instance_key = 3;
}

// RecordHeartbeatResponse is the response for recording a worker heartbeat.
message RecordHeartbeatResponse {
}
